Added check for android

--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -225,6 +225,11 @@
       const stripe = Stripe(
         "pk_live_51O9azOCJmlrAlGBoAojhLshRHV3rr5qqUXrdG13NYxbpkfLU69WVgypk06ZiARta7y7LSA3wEhbJNf2K6CvWP5Wf00trRX4rYy"
       );
+      
+      function IsAndroid()
+      {
+        return /Android/.test(navigator.userAgent);
+      }
 
       function CheckIsPwa() {
         function isInStandaloneMode() {
