new function in indexTemplate.html called CheckHasBoundAccount where we check logged user is he anonimous or not and send it back to do unity part

--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -225,6 +225,15 @@
       const stripe = Stripe(
         "pk_live_51O9azOCJmlrAlGBoAojhLshRHV3rr5qqUXrdG13NYxbpkfLU69WVgypk06ZiARta7y7LSA3wEhbJNf2K6CvWP5Wf00trRX4rYy"
       );
+
+      function CheckHasBoundAccount() {
+        firebase.auth().onAuthStateChanged(function (user) {
+          if (user) {
+              let isBounded = user.isAnonymous;
+              unity.SendMessage('JavaScriptManager', 'HasBoundedAccount', JSON.stringify({ IsBounded: isBounded }));
+            }
+        });
+      }
       
       function IsAndroid()
       {
