--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -100,8 +100,15 @@
           alt="tutorial card 5"
           style="width: 100%; height: 100%"
         />
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full" style="margin: 0"></div>
+        <div>
+          <div id="unity-progress-bar-empty">
+            <div id="unity-progress-bar-full" style="margin: 0"></div>
+          </div>
+          <img
+            src="./TemplateData/loadingText.png"
+            alt="tutorial card 5"
+            style="width: 100%;"
+          />
         </div>
       </div>
       <div id="unity-warning"></div>
